--- a/latex/variables.tex
+++ b/latex/variables.tex
@@ -1,1 +1,1 @@
-\newcommand\ThesisTitle{The Nonstationary Gabor transform in Music Information Retrieval}
+\newcommand\ThesisTitle{Nonstationary Gabor Transforms for Music Source Separation and Onset Detection}
