--- a/latex/variables.tex
+++ b/latex/variables.tex
@@ -1,1 +1,1 @@
-\newcommand\ThesisTitle{Nonstationary Gabor Transforms for Music Source Separation and Onset Detection}
+\newcommand\ThesisTitle{Music Source Separation with Nonstationary Gabor Transforms}
